fix: Force scrollbar space to be reserved

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 @keyframes slide-up-fade-in {
   0% {
     transform: translateY(100%);
